# brazil-rural-credit

./: .gitignore  README.md  pyproject.toml  utils.py
prefect_pipelines/brazil_bcb_sicor/: constants.py  flow.py  flows.py  task.py  tasks.py  utils.py
rural_credit/: dbt_project.yml
rural_credit/models/brazil_rural_credit/: brazil_rural_credit__microdados_operacao.sql  brazil_rural_credit__recurso_publico_complemento_operacao.sql  schema.yml
terraform/: main.tf  variables.tf
