[tool.poetry]
name = "brazil-rural-credit"
version = "0.1.0"
description = "This repository aims to provide a ready-to-deploy pipeline and analytics dashboard as a final project from the Data Engineering Zomcamp 2024 cohort."
authors = ["folhesgabriel <pisagabriel09@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect-gcp = "^0.5.7"
prefect = "^2.16.6"
dbt-core = "^1.7.8"
dbt-bigquery = "^1.7.5"
async = "^0.6.2"
aiohttp = "^3.9.3"
pandas = "^2.2.1"
tqdm = "^4.66.2"
pyarrow = "^15.0.2"
lxml = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
